Moved example. Added gitignore

--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
     <script src="http://localhost:55780/Scripts/jquery.signalR-2.1.0.js"></script>
     <script src="http://localhost:55780/signalr/js"></script>
     <script src="app.dart" type="application/dart"></script>
-    <script src="packages/browser/dart.js"></script>
+    <script src="../packages/browser/dart.js"></script>
 </head>
 <body>
 <h1>SignalR From Dart</h1>
