--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
+    <script src="http://localhost:55780/Scripts/jquery-1.6.4.js"></script>
+    <!--<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>-->
     <script src="http://localhost:55780/Scripts/jquery.signalR-2.1.0.js"></script>
     <script src="app.dart" type="application/dart"></script>
     <script src="../packages/browser/dart.js"></script>
